# exitmap

./: .gitignore  .gitlab-ci.yml  PLAN_TOR_EXIT_DNS_VALIDATOR.md  README.md  dependency_proxy.yml  dns_resolution_validation_report.md  pyproject.toml  tox.ini
deploy/: README.md  config.env.example
deploy/scripts/: aggregate_results.py  run_dns_validation.sh  upload_do.sh  upload_r2.sh
dns_analysis/: DNS_WILDCARD_SCAN_ANALYSIS_REPORT.md  HISTOGRAM_REPORT.md  analysis_output.json  analyze.py  deep_analysis.py  deep_analysis_output.json  histogram_analysis.py  histogram_data.json
doc/: HACKING.md
src/: command.py  eventhandler.py  exitmap.py  relayselector.py  stats.py  torsocks.py
src/modules/: checktest.py  cloudflared.py  dnshealth.py  dnspoison.py  dnsresolution.py  dnssec.py  patchingCheck.py  rtt.py  testfds.py
test/: conftest.py  test_dnshealth.py  test_exitmap.py  test_relayselector.py  test_stats.py  test_torsocks.py  test_util.py
test/data/: cached-consensus
